<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0093c4"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Topic"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#f3e5f5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_defined"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#f3e5f5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/touch"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#f3e5f5"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">


        <ImageButton
            android:id="@+id/four_side"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/four_side"/>

        <ImageButton
            android:id="@+id/six_side"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/six_side"/>

        <ImageButton
            android:id="@+id/eight_side"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/eight_side"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/ten_side"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ten_side"/>

        <ImageButton
            android:id="@+id/twelve_side"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/twelve_side"/>

        <ImageButton
            android:id="@+id/twenty_side"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/twenty_side"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customize"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#f3e5f5"/>

    <EditText
        android:id="@+id/user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/value_enter"
        android:textSize="15sp"
        android:textColor="#f3e5f5"
        android:layout_gravity="center"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_roll"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textSize="15sp"
        android:textColor="#f50057"
        android:text="@string/button"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/results_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#f3e5f5"
        android:text="@string/results"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/result_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#f3e5f5"
        android:text="@string/result1"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/result_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#f3e5f5"
        android:text="@string/result2"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/result_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#f3e5f5"
        android:text="@string/result3"
        android:layout_marginLeft="20dp"/>

    </LinearLayout>
</RelativeLayout>